--- a/app/templates/pokeapi.html
+++ b/app/templates/pokeapi.html
@@ -6,11 +6,9 @@
 
 {% block content %}
 <form method="POST" class="px-3">
-    <div class="mb-3">
-      <label for="name" class="form-label">Enter a Pokemon Name: </label>
-      <input type="text" class="form-control" id="name" name="name">
-    </div>
-    <button type="submit" class="btn btn-primary">Get Pokemon</button>
+  {{ form.hidden_tag() }}
+  {{ form.get_pokemon }}
+  {{ form.submit_btn }}
 </form>
 
 {% if poke_dict %}
