--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -24,6 +24,10 @@
             {{ form.password.label }}
             {{ form.password(class="form-control") }}
         </div>
+        <div class="mb-3">
+            {{ form.confirm_password.label }}
+            {{ form.confirm_password(class="form-control") }}
+        </div>
         <div>
             {{ form.submit_btn(class="btn btn-secondary d-block mx-auto") }}
         </div>
