--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,34 +6,38 @@
     <meta name="viewport" content="width={device-width}, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/apple-touch-icon.png')}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png')}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png')}}">
+    <link rel="manifest" href="{{ url_for('static', filename='images/site.webmanifest')}}">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('home') }}">PokeDex</a>
+          <a class="navbar-brand" href="{{ url_for('main.home') }}">PokeDex</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('home') }}">Home</a>
+                <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
               </li>
               {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('get_pokemon') }}">Get Pokemon</a>
+                  <a class="nav-link" href="{{ url_for('main.get_pokemon') }}">Get Pokemon</a>
                 </li>
                 <li class="nav-item">
-                  <p>Hi there {{ current_user.first_name }}.</p>
+                  <a class="nav-link" href="">Hi there, {{ current_user.first_name }}.</a>
                 </li>
-                <a class="btn btn-secondary" href="{{ url_for('logout')}}"></a>
+                <a class="btn btn-secondary" href="{{ url_for('auth.logout')}}">Logout</a>
               {% else %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
+                  <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
                 </li>
               {% endif %}
             </ul>
