added table for pokemon to db and added user_id as foreign key to that table

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block content %}
-    Homepage of your pokedex
+    <div class="text-center"> Homepage of your pokedex </div>
+
+    {% if posts %}
+        {% for post in posts %}
+            <p>Add card here</p>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
