currently not working but trying to add proper table for caught pokemon in models.py

--- a/app/templates/pokeapi.html
+++ b/app/templates/pokeapi.html
@@ -27,6 +27,7 @@
       <li class="list-group-item">Defense: {{poke_dict.defense}}</li>
       <li class="list-group-item">Attack: {{poke_dict.attack}}</li>
     </ul>
+    {{ form.catch_btn(class="btn btn-primary d-block mx-auto") }}
   </div>
 </div>
 {% endif %}
